--- a/frontend/src/styles/menu_lateral.css
+++ b/frontend/src/styles/menu_lateral.css
@@ -2,7 +2,7 @@
     width: 12.1vw !important;
     height: 100vh !important;
     position: absolute;
-    /* padding: 1%; */
+    padding: 1%;
 }
 
 .menu-lateral-content{
