--- a/frontend/src/styles/assuntos.css
+++ b/frontend/src/styles/assuntos.css
@@ -3,17 +3,9 @@
     height: 20vh;
     margin: 5%;
 }
-.titulo-assunto{
-    background-color: grey;
-    padding: 2%;
-    text-align: center;
-    border-radius: .5em;
-    color: white;
-    width: 100%;
-}
 
 .assunto-icone{
-    width: 8vw;
+    /* width: 7vw; */
     height: 15vh;
-    margin: 0 auto;
+    margin: 12px auto;
 }
