--- a/frontend/src/styles/curso.css
+++ b/frontend/src/styles/curso.css
@@ -1,10 +1,23 @@
-.janela-curso{
+.janela-curso-expanded{
     /* width: 100vw !important; */
+    position: relative;
+    /* width: 90vw !important; */
     max-width: 87vw !important;
     float: right;
     background-color: rgb(0, 0, 119);
     padding: 2%;
 }
+
+.janela-curso-collapsed{
+    /* width: 100vw !important; */
+    position: relative;
+    /* width: 90vw !important; */
+    max-width: 100vw !important;
+    float: right;
+    background-color: rgb(0, 0, 119);
+    padding: 2%;
+}
+
 
 .info-curso{
     padding: 5%;
@@ -13,7 +26,7 @@
     max-width: 95% !important;
     height: 80%;
     /* float: right; */
-    border-radius: 2%;
+    border-radius: 20px;
     /* margin: 1% 2% !important; */
     /* display: gr id;
     grid-template-columns: repeat(2, 1fr);
@@ -29,10 +42,6 @@
 }
 
 
-.missao{
-    width: 40% !important;
-    margin: 5%;
-}
 
 @media only screen and (max-width: 800px) {
     .missao{
@@ -47,17 +56,50 @@
     background-color: #dfe0e1;
     border-radius: 0.25rem;
     text-align: center;
+    margin-top: 1rem;
 }
 
 .progresso-concluido{
-    width: 50%;
+    /* width: 75%; */
     /* height: 100%; */
-    background-color: green;
+    background-color: rgb(104, 199, 104);
     color: white;
     justify-content: center;
+    border-radius: 00.25rem;
 }
 
 .progresso-concluido p {
-    margin: 3px 230px;
+    position: absolute;
+    margin: 0.2% 17%;
+    color: black;
+}
 
+
+.titulo-assunto{
+    display: flex;
+    background-color: grey;
+    padding: 2% 42%;
+    text-align: center;
+    border-radius: .5em;
+    color: white;
+    /* width: 600px !important; */
+    /* max-width: 300px !important; */
+    text-decoration: none;
+}
+
+.titulo-assunto:hover{
+    background-color: rgb(74, 74, 74);
+    color: lightgrey;
+}
+
+.assunto-div{
+    width: 40% !important;
+    margin: 5%;
+}
+
+@media only screen and (max-width: 800px) {
+    .assunto-div{
+        width: 80% !important;
+        margin: 5%;
+    }
 }
