--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -1,14 +1,20 @@
 .header{
+    padding: 1%;
     height: 100px;
     background-color: white;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
-
+.header-logo{
+    margin: 20 0 0;
+}
 .header-profile{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    float: right;
+    position: absolute;
+    right: 2%;
 }
 
 .language{
